--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
 
         <!-- aside-bar section -->
         <div class="sidebar"> 
-
+            
+            <a href="./index.html"><i class="fa fa-home">HOME</i></a>
+            <a href=""><i class="fa fa-tachometer">Dashboard</i></a>
+            <a href=""><i class="fa fa-edge">E-Commerce</i></a>
+            <a href=""><i class="fa fa-users">Community</i></a>
+            <a href=""><i class="fa fa-money">Finance</i></a>
+            <a href=""><i class="fa fa-calendar">Calendar</i></a>
+            <a href=""><i class="fa fa-comments">Messages</i></a>
+            
         </div>
 
         <!-- main section  -->
