--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="header">
                     <div class="nav">
                      <a href=""><i class="fa fa-search"></i></a>
-                     <a href=""><i class="fa fa-info-circle"></i></a>
+                     <a href="./about.html"><i class="fa fa-info-circle"></i></a>
                      <a href=""><i class="fa fa-comments-o"></i></a>
                      <a href=""><i class="fa fa-user"></i></a>
                     </div>
@@ -22,7 +22,7 @@
 
         <!-- aside-bar section -->
         <div class="sidebar"> 
-            
+
             <a href="./index.html"><i class="fa fa-home">HOME</i></a>
             <a href=""><i class="fa fa-tachometer">Dashboard</i></a>
             <a href=""><i class="fa fa-edge">E-Commerce</i></a>
